--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="cant_find">can\'t find data</string>
     <string name="search">search</string>
     <string name="enter_word">Enter word...</string>
+    <string name="history">history</string>
+    <string name="details">details</string>
+    <string name="History">History</string>
 </resources>
